# pytest-memlog

./: .gitignore  Example.ipynb  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
examples/: test_example.py
src/pytest_memlog/: formatting.py  memlog.py  plugin.py
tests/: conftest.py  test_basic.py
